[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chetverikov"
version = "0.0.1"
authors = [
  { name="Dragon066", email="NickTitov123@yandex.ru" },
]
description = "Chetverikov method for time-series analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dragon066/chetverikov"
Issues = "https://github.com/Dragon066/chetverikov/issues"